# Spotify2YouTubeMusic

./: README.md  pyproject.toml
spotify2youtube/: __init__.py  core.py  test.py
spotify2youtube/lib/: __init__.py  playlist.py  provider.py  spotify.py  usersettings.json  youtube_music.py
typings/spotipy/: __init__.pyi  cache_handler.pyi  client.pyi  exceptions.pyi  oauth2.pyi  util.pyi
